# only-relative-import

./: .cruft.json  .pre-commit-hooks.yaml  README.md  pyproject.toml
only_relative_import/: __main__.py  main.py
tests/: test_only_relative_import.py
