[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[project]
name = "only-relative-import"
version = "0.1.0"
description = "Linter to only allow relative imports! :sweat_smile:"
readme = "README.md"
authors = [
    { name = "Marcelo Trylesinski", email = "marcelotryle@email.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
requires-python = ">=3.7"
dependencies = ["libcst", "typer"]
optional-dependencies = {}

[project.urls]
Homepage = "https://github.com/Kludex/only-relative-import"
Source = "https://github.com/Kludex/only-relative-import"
Twitter = "https://twitter.com/marcelotryle"
Funding = "https://github.com/sponsors/Kludex"

[project.scripts]
only-relative-import = "only_relative_import.__main__:app"

[tool.hatch.envs.only_relative_import]
type = "virtual"

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.mypy]
strict = true
show_error_codes = true

[tool.black]
target-version = ["py37"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.coverage.run]
source_pkgs = ["only_relative_import", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
